--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="frame">
       <span>Anushka</span>
-      <span>I love You</span>
+      <span>Kishor</span>
     </div>
   </div>
 
